Fixed alignment issues in mobile layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ nav {
         width: 75%;
     }
 
-    .container-fluid {
+    #title .container-fluid {
         padding: 3% 12%;
     }
 }
@@ -71,27 +71,27 @@ nav {
 /* Features */
 #features {
     background-color: #fff;
-    /* margin: 0; */
+    padding: 7% 15%;
 }
-.alignment {
+.feature-box {
     text-align: center;
-    padding: 10% 5%;
-
+    padding: 5%;
+    
 }
+
+.features-heading {
+    font-size: 1.5rem;
+    font-family: "Montserrat";
+    font-weight: 700;
+    margin: 5% 0;
+}
+
 .features-icon {
     color: #ef8172;
     transition: 0.3s;
 }
 .features-icon:hover{
     color: #ff4c68;
-   
-}
-
-.features-heading {
-    font-size: 1.5rem;
-    font-family: "Montserrat";
-    font-weight: 600;
-    margin: 5% 0;
 }
 
 .features-para {
